--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="title_ico.ico" />
   </head>
-  <body background="wallpaper.jpg">
+  <body>
 
     <h1 class="box">Jeg ELSKER dig!</h1>
+
+    <div class="center">
+        <img src="images\Yndlings.jpg" alt="Mig og min elskede til Idas barnedåb" style="width:800px;height:auto;" class="cuteBox">
+    </div>
+
+    <!--
+        |||  |||
+      |||||||||||
+     |||||||||||||
+      |||||||||||
+       |||||||||
+        |||||||
+         |||||
+          |||
+           |
+  -->
     <div class="p5box">
       <iframe scrolling="no" src="p5/empty-example/index.html" width="500px" height="100px"></iframe>
+    </div>
+
+    <div>
+      <img src="images/Nytår.jpg" alt="En dejlig nytårsaften med min skønne skat <3" style="width:600px;text-align:left;" class="cuteBox">
     </div>
 
   </body>
