--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
     </div>
 
     <!--
-        |||  |||
-      |||||||||||
-     |||||||||||||
-      |||||||||||
-       |||||||||
-        |||||||
-         |||||
-          |||
-           |
+        |||||| ||||||
+      |||||||||||||||||
+     |||||||||||||||||||
+      ||||||||||||||||
+       |||||||||||||
+        ||||||||||
+         |||||||
+          ||||
+           ||
   -->
     <div class="p5box">
       <iframe scrolling="no" src="p5/empty-example/index.html" width="500px" height="100px"></iframe>
     </div>
 
-    <div>
-      <img src="images/Nytår.jpg" alt="En dejlig nytårsaften med min skønne skat <3" style="width:600px;text-align:left;" class="cuteBox">
+    <div style="width:auto;height:auto;">
+      <img src="images/Nytår.jpg" alt="En dejlig nytårsaften med min skønne skat <3" style="width:63%;position:absolute;right:1.8%; left" class="cuteBox">
+      <img src="images/Drengene.jpg" style="width:33%;" alt="Dine to drenge i færd med det umulige!" class="cuteBox">
+      <h2 class="box">"Right next to the right one"</h2>
+    </div>
+    <div style="width:auto;height:auto;">
+      <img src="images/Banan_001.jpg" style="width:47%" class="cuteBox">
     </div>
 
   </body>
