--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
 
+<!-- Paraphrase -->
     <h1 class="box">Jeg ELSKER dig!</h1>
 
     <div class="center">
         <img src="images\Yndlings.jpg" alt="Mig og min elskede til Idas barnedåb" style="width:800px;height:auto;" class="cuteBox">
     </div>
-
+<!-- Paraphrase -->
     <!--
         |||||| ||||||
       |||||||||||||||||
@@ -25,18 +26,59 @@
           ||||
            ||
   -->
+  <!-- Paraphrase -->
     <div class="p5box">
       <iframe scrolling="no" src="p5/empty-example/index.html" width="500px" height="100px"></iframe>
     </div>
+<!-- Paraphrase -->
 
+<!-- Paraphrase -->
     <div style="width:auto;height:auto;">
       <img src="images/Nytår.jpg" alt="En dejlig nytårsaften med min skønne skat <3" style="width:63%;position:absolute;right:1.8%; left" class="cuteBox">
       <img src="images/Drengene.jpg" style="width:33%;" alt="Dine to drenge i færd med det umulige!" class="cuteBox">
       <h2 class="box">"Right next to the right one"</h2>
     </div>
-    <div style="width:auto;height:auto;">
-      <img src="images/Banan_001.jpg" style="width:47%" class="cuteBox">
+<!-- Paraphrase -->
+
+<!-- Paraphrase -->
+ <div class="row">
+  <div class="column">
+    <img src="images/Messenger_kog_003.jpg" alt="Snow" style="width:100%" class="cuteBox">
+  </div>
+  <div class="column">
+    <img src="images/Messenger_kog_001.jpg" alt="Forest" style="width:100%" class="cuteBox">
+  </div>
+  <div class="column">
+    <img src="images/Messenger_kog_002.jpg" alt="Mountains" style="width:100%" class="cuteBox">
+  </div>
+</div>
+<!-- Paraphrase -->
+
+
+<div class="row">
+  <h1 class="box">"DEJsklækkerlig!"</h1>
+  <!-- Paraphrase -->
+   <div class="row">
+    <div class="column">
+      <img src="images/Idas_dåb_001.jpg" alt="Snow" style="width:100%" class="cuteBox">
     </div>
+    <div class="column">
+      <img src="images/Idas_dåb_007.jpg" alt="Forest" style="width:100%" class="cuteBox">
+    </div>
+    <div class="column">
+      <img src="images/Idas_dåb_002.jpg" alt="Mountains" style="width:100%" class="cuteBox">
+    </div>
+  </div>
+  <!-- Paraphrase -->
+  <div style="width:100%;">
+    <h1 class="box">Mit blåbær</h1>
+    <img src="images/Photoshop madness.png" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 40%;width:75%;">
+  </div>
+</div>
+
+  <div class="">
+
+  </div>
 
   </body>
 </html>
