--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="title_ico.ico" />
   </head>
-  <body>
+  <body onload="showSlides()">
 
 <!-- Paraphrase -->
     <h1 class="box">Jeg ELSKER dig!</h1>
@@ -115,22 +115,113 @@ function showSlides(n) {
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
+    <div class="numbertext">1 / 5</div>
+    <img src="images/slideshow/slide_001.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
     <div class="text">Du er en skat!</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
+    <div class="numbertext">2 / 5</div>
+  <img src="images/slideshow/slide_002.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
     <div class="text">Aquaman!</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
-    <div class="text">Vent, hæver du lige nu?</div>
+    <div class="numbertext">3 / 5</div>
+    <img src="images/slideshow/slide_003.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+    <div class="text">Smukke!</div>
   </div>
+
+  <div class="mySlides fade">
+      <div class="numbertext">4 / 5</div>
+      <img src="images/slideshow/slide_004.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+      <div class="text">Min!</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">5 / 5</div>
+        <img src="images/slideshow/slide_005.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">Pandekager? Ja tak!</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">6 / 5</div>
+        <img src="images/slideshow/slide_006.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">7 / 5</div>
+        <img src="images/slideshow/slide_007.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">8 / 5</div>
+        <img src="images/slideshow/slide_008.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">9 / 5</div>
+        <img src="images/slideshow/slide_009.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">10 / 5</div>
+        <img src="images/slideshow/slide_010.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">11 / 5</div>
+        <img src="images/slideshow/slide_011.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">12 / 5</div>
+        <img src="images/slideshow/slide_012.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">13 / 5</div>
+        <img src="images/slideshow/slide_013.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">14 / 5</div>
+        <img src="images/slideshow/slide_014.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">15 / 18</div>
+        <img src="images/slideshow/slide_015.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">16 / 18</div>
+        <img src="images/slideshow/slide_016.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">17 / 18</div>
+        <img src="images/slideshow/slide_017.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">18 / 18</div>
+        <img src="images/slideshow/slide_018.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -143,6 +234,22 @@ function showSlides(n) {
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+  <span class="dot" onclick="currentSlide(8)"></span>
+  <span class="dot" onclick="currentSlide(9)"></span>
+  <span class="dot" onclick="currentSlide(10)"></span>
+  <span class="dot" onclick="currentSlide(11)"></span>
+  <span class="dot" onclick="currentSlide(12)"></span>
+  <span class="dot" onclick="currentSlide(13)"></span>
+  <span class="dot" onclick="currentSlide(14)"></span>
+  <span class="dot" onclick="currentSlide(15)"></span>
+  <span class="dot" onclick="currentSlide(16)"></span>
+  <span class="dot" onclick="currentSlide(17)"></span>
+  <span class="dot" onclick="currentSlide(18)"></span>
+
 </div>
 
   </body>
