Last update before bed
Bedtime

--- a/index.html
+++ b/index.html
@@ -115,110 +115,254 @@ function showSlides(n) {
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 5</div>
+    <div class="numbertext">1 / 42</div>
     <img src="images/slideshow/slide_001.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
     <div class="text">Du er en skat!</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 5</div>
+    <div class="numbertext">2 / 42</div>
   <img src="images/slideshow/slide_002.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
     <div class="text">Aquaman!</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 5</div>
+    <div class="numbertext">3 / 42</div>
     <img src="images/slideshow/slide_003.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
     <div class="text">Smukke!</div>
   </div>
 
   <div class="mySlides fade">
-      <div class="numbertext">4 / 5</div>
+      <div class="numbertext">4 / 42</div>
       <img src="images/slideshow/slide_004.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
       <div class="text">Min!</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">5 / 5</div>
+        <div class="numbertext">5 / 42</div>
         <img src="images/slideshow/slide_005.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">Pandekager? Ja tak!</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">6 / 5</div>
-        <img src="images/slideshow/slide_006.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="numbertext">6 / 42</div>
+        <img src="images/slideshow/slide_006.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 75%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">7 / 5</div>
+        <div class="numbertext">7 / 42</div>
         <img src="images/slideshow/slide_007.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">8 / 5</div>
+        <div class="numbertext">8 / 42</div>
         <img src="images/slideshow/slide_008.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">9 / 5</div>
+        <div class="numbertext">9 / 42</div>
         <img src="images/slideshow/slide_009.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">10 / 5</div>
+        <div class="numbertext">10 / 42</div>
         <img src="images/slideshow/slide_010.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">11 / 5</div>
+        <div class="numbertext">11 / 42</div>
         <img src="images/slideshow/slide_011.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">12 / 5</div>
+        <div class="numbertext">12 / 42</div>
         <img src="images/slideshow/slide_012.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">13 / 5</div>
+        <div class="numbertext">13 / 42</div>
         <img src="images/slideshow/slide_013.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">14 / 5</div>
+        <div class="numbertext">14 / 42</div>
         <img src="images/slideshow/slide_014.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">15 / 18</div>
+        <div class="numbertext">15 / 42</div>
         <img src="images/slideshow/slide_015.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">16 / 18</div>
+        <div class="numbertext">16 / 42</div>
         <img src="images/slideshow/slide_016.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">17 / 18</div>
+        <div class="numbertext">17 / 42</div>
         <img src="images/slideshow/slide_017.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
   <div class="mySlides fade">
-        <div class="numbertext">18 / 18</div>
-        <img src="images/slideshow/slide_018.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="numbertext">18 / 42</div>
+        <img src="images/slideshow/slide_0018.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">19 / 42</div>
+        <img src="images/slideshow/slide_019.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">20 / 42</div>
+        <img src="images/slideshow/slide_020.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">21 / 42</div>
+        <img src="images/slideshow/slide_021.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">22 / 42</div>
+        <img src="images/slideshow/slide_022.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">23 / 42</div>
+        <img src="images/slideshow/slide_023.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">24 / 42</div>
+        <img src="images/slideshow/slide_024.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">25 / 42</div>
+        <img src="images/slideshow/slide_025.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">26 / 42</div>
+        <img src="images/slideshow/slide_026.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">27 / 42</div>
+        <img src="images/slideshow/slide_027.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">28 / 42</div>
+        <img src="images/slideshow/slide_028.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">29 / 42</div>
+        <img src="images/slideshow/slide_029.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">30 / 42</div>
+        <img src="images/slideshow/slide_030.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">31 / 42</div>
+        <img src="images/slideshow/slide_031.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">32 / 42</div>
+        <img src="images/slideshow/slide_032.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">33 / 42</div>
+        <img src="images/slideshow/slide_033.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">34 / 42</div>
+        <img src="images/slideshow/slide_034.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">35 / 42</div>
+        <img src="images/slideshow/slide_035.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">36 / 42</div>
+        <img src="images/slideshow/slide_036.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">37 / 42</div>
+        <img src="images/slideshow/slide_037.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">38 / 42</div>
+        <img src="images/slideshow/slide_038.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">39 / 42</div>
+        <img src="images/slideshow/slide_039.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="numbertext">40 / 42</div>
+  <div class="mySlides fade">
+        <img src="images/slideshow/slide_040.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">41 / 42</div>
+        <img src="images/slideshow/slide_041.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
+        <div class="text">XXXXX</div>
+  </div>
+
+  <div class="mySlides fade">
+        <div class="numbertext">42 / 42</div>
+        <img src="images/slideshow/slide_042.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
         <div class="text">XXXXX</div>
   </div>
 
@@ -249,6 +393,31 @@ function showSlides(n) {
   <span class="dot" onclick="currentSlide(16)"></span>
   <span class="dot" onclick="currentSlide(17)"></span>
   <span class="dot" onclick="currentSlide(18)"></span>
+  <span class="dot" onclick="currentSlide(19)"></span>
+  <span class="dot" onclick="currentSlide(20)"></span>
+  <span class="dot" onclick="currentSlide(21)"></span>
+  <span class="dot" onclick="currentSlide(22)"></span>
+  <span class="dot" onclick="currentSlide(23)"></span>
+  <span class="dot" onclick="currentSlide(24)"></span>
+  <span class="dot" onclick="currentSlide(25)"></span>
+  <span class="dot" onclick="currentSlide(26)"></span>
+  <span class="dot" onclick="currentSlide(27)"></span>
+  <span class="dot" onclick="currentSlide(28)"></span>
+  <span class="dot" onclick="currentSlide(29)"></span>
+  <span class="dot" onclick="currentSlide(30)"></span>
+  <span class="dot" onclick="currentSlide(31)"></span>
+  <span class="dot" onclick="currentSlide(32)"></span>
+  <span class="dot" onclick="currentSlide(33)"></span>
+  <span class="dot" onclick="currentSlide(34)"></span>
+  <span class="dot" onclick="currentSlide(35)"></span>
+  <span class="dot" onclick="currentSlide(36)"></span>
+  <span class="dot" onclick="currentSlide(37)"></span>
+  <span class="dot" onclick="currentSlide(38)"></span>
+  <span class="dot" onclick="currentSlide(39)"></span>
+  <span class="dot" onclick="currentSlide(40)"></span>
+  <span class="dot" onclick="currentSlide(41)"></span>
+  <span class="dot" onclick="currentSlide(42)"></span>
+
 
 </div>
 
