--- a/index.html
+++ b/index.html
@@ -147,43 +147,43 @@ function showSlides(n) {
   <div class="mySlides fade">
         <div class="numbertext">6 / 42</div>
         <img src="images/slideshow/slide_006.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 75%">
-        <div class="text">XXXXX</div>
+        <div class="text">God røv ;)</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">7 / 42</div>
         <img src="images/slideshow/slide_007.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Savner dig fandme så meget!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">8 / 42</div>
         <img src="images/slideshow/slide_008.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">182 dage med dig!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">9 / 42</div>
         <img src="images/slideshow/slide_009.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Vi er ret vovede!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">10 / 42</div>
         <img src="images/slideshow/slide_010.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Varmt kildevand snart?</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">11 / 42</div>
         <img src="images/slideshow/slide_011.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Du er min forevigt hvis du vil</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">12 / 42</div>
         <img src="images/slideshow/slide_012.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Til solen stiger i vest</div>
   </div>
 
   <div class="mySlides fade">
