I might be done now
no wait, now im done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <img src="images/Idas_dåb_001.jpg" alt="Snow" style="width:100%" class="cuteBox">
     </div>
     <div class="column">
-      <img src="images/Idas_dåb_007.jpg" alt="Forest" style="width:100%" class="cuteBox">
+      <img src="images/Idas_dåb_003.jpg" alt="Forest" style="width:100%" class="cuteBox">
     </div>
     <div class="column">
       <img src="images/Idas_dåb_002.jpg" alt="Mountains" style="width:100%" class="cuteBox">
@@ -189,175 +189,175 @@ function showSlides(n) {
   <div class="mySlides fade">
         <div class="numbertext">13 / 42</div>
         <img src="images/slideshow/slide_013.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">"Sidste skoledag</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">14 / 42</div>
         <img src="images/slideshow/slide_014.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Lovebox på stranden</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">15 / 42</div>
         <img src="images/slideshow/slide_015.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Solnedgang på stranden</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">16 / 42</div>
         <img src="images/slideshow/slide_016.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Tæppe og en mark?</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">17 / 42</div>
         <img src="images/slideshow/slide_017.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Efterskole besøg snart!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">18 / 42</div>
         <img src="images/slideshow/slide_0018.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">another round</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">19 / 42</div>
         <img src="images/slideshow/slide_019.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">"Plan our escape"</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">20 / 42</div>
         <img src="images/slideshow/slide_020.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Hmm.. Ja.. Altså..</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">21 / 42</div>
         <img src="images/slideshow/slide_021.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Skal du ikke lige smage sovsen Magnus?</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">22 / 42</div>
         <img src="images/slideshow/slide_022.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Emils dakkedak</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">23 / 42</div>
         <img src="images/slideshow/slide_023.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Skal du have et glas rødvin</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">25 / 42</div>
         <img src="images/slideshow/slide_025.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">... Må man have sex til en barndåb?</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">26 / 42</div>
         <img src="images/slideshow/slide_026.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Shhhhh</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">27 / 42</div>
         <img src="images/slideshow/slide_027.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Til! til til til til!!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">28 / 42</div>
         <img src="images/slideshow/slide_028.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Din flødefyr</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">29 / 42</div>
         <img src="images/slideshow/slide_029.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Jeg koger så jeg står lige med hovedet ude af vinduet</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">30 / 42</div>
         <img src="images/slideshow/slide_030.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">"Nogle gange ville jeg ønske at vægen havde en mund, det ville gøre alt nemmere"</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">31 / 42</div>
         <img src="images/slideshow/slide_031.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Er så glad for at jeg kan være ærlig med dig om alt</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">32 / 42</div>
         <img src="images/slideshow/slide_032.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Tak for din støtte skat! Det betyder så meget</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">33 / 42</div>
         <img src="images/slideshow/slide_033.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Der er ingen der kan gøre mig så glad som du kan!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">34 / 42</div>
         <img src="images/slideshow/slide_034.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Du har en uendelig kys koupon, husk at bruge den lige når du vil!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">35 / 42</div>
         <img src="images/slideshow/slide_035.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Vi kan klare alt skat!</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">36 / 42</div>
         <img src="images/slideshow/slide_036.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Sammen er vi stærkere</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">37 / 42</div>
         <img src="images/slideshow/slide_037.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Plz bliv gammel med mig</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">38 / 42</div>
         <img src="images/slideshow/slide_038.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Fuck alt andet, så længe jeg har dig er jeg glad</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">39 / 42</div>
         <img src="images/slideshow/slide_039.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Sender kys og kram</div>
   </div>
 
   <div class="numbertext">40 / 42</div>
   <div class="mySlides fade">
         <img src="images/slideshow/slide_040.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Glædelig</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">41 / 42</div>
         <img src="images/slideshow/slide_041.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">6</div>
   </div>
 
   <div class="mySlides fade">
         <div class="numbertext">42 / 42</div>
         <img src="images/slideshow/slide_042.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">XXXXX</div>
+        <div class="text">Måneder</div>
   </div>
 
 
@@ -410,10 +410,29 @@ function showSlides(n) {
   <span class="dot" onclick="currentSlide(39)"></span>
   <span class="dot" onclick="currentSlide(40)"></span>
   <span class="dot" onclick="currentSlide(41)"></span>
-
-
-
 </div>
+
+  <h1 class="box">Jeg elsker dig skat, elsker dig altid!</h1>
+
+<!-- More pictures!!  -->
+<div class="row">
+  <div class="column">
+      <img src="images/Idas_dåb_004.jpg" alt="Snow" style="width:100%" class="cuteBox">
+  </div>
+  <div class="column">
+    <img src="images/Idas_dåb_005.jpg" alt="Snow" style="width:100%" class="cuteBox">
+  </div>
+  <div class="column">
+    <img src="images/Idas_dåb_006.jpg" alt="Snow" style="width:100%" class="cuteBox">
+  </div>
+</div>
+
+  <h1 class="box">Vi ses snart!</h1>
+
+<div class="row">
+  <img src="images/Idas_dåb_007.jpg" alt="Snow" style="width:100%" class="cuteBox">
+</div>
+
 
   </body>
 </html>
