--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ function showSlides(n) {
 
   <h1 class="box">Jeg elsker dig skat, elsker dig altid!</h1>
 
-<!-- More pictures!!  -->
+<!-- More pictures!! plz work  -->
 <div class="row">
   <div class="column">
       <img src="images/Idas_dåb_004.jpg" alt="Snow" style="width:100%" class="cuteBox">
