--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="shortcut icon" type="image/x-icon" href="title_ico.ico" />
   </head>
   <body onload="showSlides()">
+    <audio controls>
+  <source src="rnttro.mp3" type="audio/mp3">
+</audio>
+<h1 style="text-align:center;">Skru op!</h1>
 
 <!-- Paraphrase -->
     <h1 class="box">Jeg ELSKER dig!</h1>
