--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="title_ico.ico" />
   </head>
-  <body onload="showSlides()">
+  <body onload="showSlides()" onload="">
     <audio controls>
   <source src="rnttro.mp3" type="audio/mp3">
 </audio>
-<h1 style="text-align:center;">Skru op!</h1>
+<h2 style="text-align:center;">Skru op!</h2>
 
 <!-- Paraphrase -->
     <h1 class="box">Jeg ELSKER dig!</h1>
