--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ function showSlides(n) {
   <div class="mySlides fade">
         <div class="numbertext">30 / 42</div>
         <img src="images/slideshow/slide_030.jpg" class="cuteBox" style="display: block;margin-left:auto;margin-right: auto;width: 50%">
-        <div class="text">"Nogle gange ville jeg ønske at vægen havde en mund, det ville gøre alt nemmere"</div>
+        <div class="text">"Nogle gange ville jeg ønske at væggen havde en mund, det ville gøre alt nemmere"</div>
   </div>
 
   <div class="mySlides fade">
