--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="box">Jeg ELSKER dig!</h1>
 
     <div class="center">
-        <img src="images\Yndlings.jpg" alt="Mig og min elskede til Idas barnedåb" style="width:800px;height:auto;" class="cuteBox">
+        <img src="images\Yndlings.jpg" alt="Mig og min elskede til Idas barnedåb" style="width:75%;height:auto;" class="cuteBox">
     </div>
 <!-- Paraphrase -->
     <!--
